<resources>
    <string name="app_name">BFL Shop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BFL Group</string>
    <string name="nav_header_subtitle">itsupport@bflgroup.ae</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_inventory">Inventory</string>
    <string name="menu_home">Home</string>

    <string name="menu_price_check">Price Check</string>
    <string name="menu_grn_transfer">GRN Transfer</string>
    <string name="menu_rfid_grn_transfer">GRN Transfer (RFID)</string>
    <string name="menu_grn_transfer_new">GRN Transfer</string>
    <string name="menu_grn_direct_delivery">GRN Direct Delivery</string>
    <string name="menu_stock_taking">Stock Taking</string>
    <string name="menu_stock_taking_verify">Stock Taking Verification</string>
    <string name="menu_stock_taking_report">Stock Taking Report</string>
    <string name="menu_stock_taking_rfid">Stock Taking (RFID)</string>
    <string name="menu_gin_verification">GIN Verification</string>
    <string name="menu_ageing_stock_taking">Ageing Stock Taking</string>
    <string name="menu_add_disount">Add Discount</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_user_create">User Create</string>
    <string name="menu_grn">GRN</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_file">File</string>
    <string name="menu_ageing">Ageing or Price Change</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_version">12.02</string>
    <string name="menu_sales">Sales</string>
    <string name="menu_sales_invoice">Sales Invoice</string>
    <string name="menu_store_entry">Store Entry</string>
    <string name="menu_proxy_dic">PROXY/DIC Counting</string>
    <string name="menu_ageing_print">Print Ageing</string>
    <string name="menu_ageing_print_wify">Slashing</string>
    <string name="menu_ho_pricechange_print_wify">HO Price Change</string>
    <string name="menu_ageing_print_report">Slashing Report</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: For sunmi printer -->
    <string name="toast_1">Transaction print,use the AIDL mode!</string>
    <string name="toast_2">The service has been disconnected!</string>
    <string name="toast_3">Bluetooth device is unavailable</string>
    <string name="toast_4">Bluetooth device not detected. Please open Bluetooth!</string>
    <string name="toast_5">Not Found InnterPrinter!</string>
    <string name="toast_6">Bluetooth connect failed!</string>
    <string name="toast_7"> Only a single Qr code is printed for the AIDL mode</string>
    <string name="toast_8">Now QrCode size must be less than 7!</string>
    <string name="toast_9">BarCode type or conent error!</string>
    <string name="toast_10">Please set the printer as black label mode!</string>
    <string name="toast_11">Settings->System->Advanced->InnerPrinter-> set black mark function</string>
    <string name="toast_12">Please set the printer to label mode!</string>

    <string-array name="lebel_type">
        <item>Yellow</item>
        <item>Red</item>
    </string-array>
</resources>
